api/swim_form/src/tests/derive/form/tag_enum.stderr
error: Enum variants cannot specify a tag field
  --> $DIR/src/tests/derive/form/tag_enum.rs:18:14
   |
18 |     #[derive(Form)]
   |              ^^^^
